* Wallet: new command line and config switch "prompt" to confirm writing signed transaction to disk
* Wallet: Displays a message before exiting, when an empty seed pasword is provided
* Lib: FindFarthestNode() now selects the farthest block by sum of POW, not by its height (fix for testnet4 crash at #42702)

1.10.3 - 2024-08-13:
* Tools/balio: Some improvements around blockchair.com and blockcypher.com API
* Tools/balio: Fixed balance fetching for Litecoin
* Lib: New function (btc.Tx).ContainsOrdFile(), as per github.com/casey/ord
* Client/WebUI: The fees chart for an already mined block shows the cross with reference to x and y axis
* Client/WebUI/Home: Fixed blocks SPB values on the chart, as the ones showed previously were not accurate
* Client/WebUI/Home: Added blocks Weight chart
* Client/WebUI/Miners: Shows version data only for the recent blocks (as BIP9 has not been used for awhile)
* Client: Fixed how the average TX fee is caluclated over "CFG.Stat.FeesBlks" (it was showing too low values)
* Client: Don't send "getmp" messages if Mempool is more than half full
* Tools/bdb - new command "-compress" to compress a "bl*.dat" file (after running node without "CFG.Memory.CompressBlockDB")
* Client/TextUI: new command "usd" - tries to figure out curent BTC/USD price, using UTXOracle method
* Client/WebUI: some improvements to the block fees chart (in Home and Blocks tab)
* Client/TextUI: some code cleanup
* Tools: each tool moved it its own sub-directory (IDE-s did not like multiple main-s in same folder)
* Client/WebUI/Home: Shows the percentage occupancy of the ord inscriptions for each block
* Tools/bdb - new command "-ord" to see ord inscriptions occupancy per block (use with "-ox" to extract the files)
* Client: fixed lock problems releted to geting mempool content (only for peers we're authenticated with)
* Lib: Chenges in "others/bip39" (invalid mnemonic error is more descriptiove, removed some warnings)